Fix track-button text readability in dark and purple themes by adding black text color

--- a/app/styles/components/track-btn.scss
+++ b/app/styles/components/track-btn.scss
@@ -13,6 +13,7 @@
     &.active {
         .track-inner {
             background: rgba($color-link-primary, .3);
+            color: $color-black;
         }
         .icon {
             fill: $color-link-primary,;
